--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,3 +13,4 @@ include_directories(Tree)
 add_executable(BST Tree/BST.cpp)
 add_executable(Huffman Tree/Huffman.cpp)
 add_executable(Heap Tree/Heap.cpp)
+add_executable(List Liner/LinkedList.cpp)
